# FSRS

./: .gitignore  AGENTS.md  AGENTS.mg  README.md  cz_ru_words_thesaurus.csv  pyproject.toml  run.fish  run.sh  tmp-webmcp.csv
PLANS/: MAIN_PLAN.md
PLANS/deck_population/: 12_randomized_review_queue_order.md
PLANS/review_direction/: 01_directional_review_state_schema.md  02_directional_study_flow.md  03_dashboard_stats_map_regression.md  MAIN_PLAN.md
docs/: FSRS_SCOPE.md  PROJECT_MAP.md  memory_tips_evidence.html
src/czech_vocab/: __init__.py
src/czech_vocab/domain/: __init__.py  fsrs_scheduler.py
src/czech_vocab/importers/: __init__.py  csv_parser.py
src/czech_vocab/repositories/: __init__.py  card_repository.py  deck_card_repository.py  deck_population_draft_repository.py  deck_repository.py  import_preview_repository.py  records.py  schema.py  schema_migrations.py  (+1 more)
tests/: conftest.py  test_card_catalog.py  test_card_edit_page.py  test_card_edit_service.py  test_card_repository.py  test_csv_deck_import_flow.py  test_csv_deck_import_service.py  test_csv_parser.py  test_dashboard_and_acceptance.py  test_deck_add_flow.py  test_deck_add_service.py  test_deck_create_service.py  test_deck_creation_flow.py  test_deck_population_service.py  test_deck_settings_service.py  test_fsrs_scheduler.py  test_global_base_schema.py  test_import_flow.py  test_import_service.py  test_package.py  test_review_ui.py  test_run_scripts.py  test_settings_page.py  test_settings_service.py  test_stats_page.py  test_stats_service.py  test_study_service.py  test_web_shell.py
(+32 files in other folders)
