[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "czech-vocab-fsrs"
version = "0.1.0"
description = "Flask MVP for learning Czech vocabulary with FSRS scheduling."
requires-python = "==3.14.*"
dependencies = [
    "Flask>=3.1,<4.0",
    "fsrs>=6.3,<7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4,<9.0",
    "ruff>=0.11,<0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/czech_vocab"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
